Add screen transition for map
Display a screen transition when you toggle the map
Add a container div to hide the overflow of canvases that are positioned
out of the desired viewport
Add a lock property to prevent toggling the map before the screen
transition finishes

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
-canvas {
+div {
     position: absolute;
-    top: 0px;
-    left: 0px;
-    background: transparent;
+    top: 0;
+    left: 0;
+    min-width: 768;
+    min-height: 720;
+    overflow: hidden;
 } 
